dnl configure.in
AC_PREREQ(2.59)
AC_INIT(example, 0.1)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([example1.vala])
AC_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE([foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(VALAFLAGS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
