dnl configure.in
AC_PREREQ(2.59)
AC_INIT(example, 0.1)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([example1.vala])
AC_CONFIG_HEADER([config.h])
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE([foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_LIBTOOL

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_SUBST(VALAFLAGS)

VALA_PACKAGE=vala-0.10
LIBVALA_REQUIRED=0.9.7
GLIB_REQUIRED=2.12.0
MIDGARDCR_PACKAGE=midgardcr
MIDGARDCR_REQUIRED=10.05.99

PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(LIBVALA, $VALA_PACKAGE >= $LIBVALA_REQUIRED)
AC_SUBST(LIBVALA_CFLAGS)
AC_SUBST(LIBVALA_LIBS)
AC_SUBST(VALA_PACKAGE)

PKG_CHECK_MODULES(MIDGARDCR, $MIDGARDCR_PACKAGE >= $MIDGARDCR_REQUIRED)
AC_SUBST(MIDGARDCR_CFLAGS)
AC_SUBST(MIDGARDCR_LIBS)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
